--- a/templates/customer/apply_policy.html
+++ b/templates/customer/apply_policy.html
@@ -43,14 +43,17 @@
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-        <th>Serial No.</th>
+        <th>Policy ID</th>
           <th>Policy Name</th>
           <th> Category</th>
-          <th> Sum Assurance</th>
+          {% comment %} <th> Sum Assurance</th> {% endcomment %}
           <th> Premium</th>
           <th> Tenure</th>
-          <th> Creation Date</th>
-          <th> Apply</th>
+          <th>Policy Limit</th>
+          <th>Benefits</th>
+          <th>Drawbacks</th>
+          {% comment %} <th> Creation Date</th>
+          <th> Apply</th> {% endcomment %}
           
         </tr>
       </thead>
