--- a/templates/customer/history.html
+++ b/templates/customer/history.html
@@ -44,7 +44,7 @@
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-        <th>Serial No.</th>
+        <th>Policy ID</th>
           <th>Policy Name</th>
 
           <th> Applied Date</th>
