--- a/templates/customer/question_history.html
+++ b/templates/customer/question_history.html
@@ -1,9 +1,11 @@
-{% extends 'customer/customerbase.html' %}
-{% block content %}
-{%load static%}
+{% extends 'customer/customerbase.html' %} {% block content %} {%load static%}
 
 <head>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link
+    href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+    rel="stylesheet"
+    id="bootstrap-css"
+  />
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
@@ -20,22 +22,22 @@
       margin: 100px;
     }
 
-       label #sidebar_btn {
+    label #sidebar_btn {
       z-index: 1;
       color: #fff;
       position: fixed;
       cursor: pointer;
       left: 300px;
       padding-left: 60px;
-      margin-top:15px;
+      margin-top: 15px;
       font-size: 20px;
-      
+
       transition: 0.5s;
       transition-property: color;
     }
   </style>
 </head>
-<br><br>
+<br /><br />
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
@@ -44,18 +46,16 @@
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-        <th>Serial No.</th>
+          <th>Serial No.</th>
           <th>Question</th>
-            <th>Admin Comment</th> 
-          <th> Asked Date</th>
-          
-          
+          <th>Admin Comment</th>
+          <th>Asked Date</th>
         </tr>
       </thead>
       {% for t in questions %}
       <tr>
-        <td> {{ forloop.counter }}</td>
-        <td> {{t.description}}</td>
+        <td>{{ forloop.counter }}</td>
+        <td>{{t.description}}</td>
 
         <td>{{t.admin_comment}}</td>
         <td>{{t.asked_date}}</td>
@@ -65,5 +65,5 @@
   </div>
 </div>
 
-<br><br><br><br><br><br>
+<br /><br /><br /><br /><br /><br />
 {% endblock content %}
