--- a/templates/insurance/admin_add_policy.html
+++ b/templates/insurance/admin_add_policy.html
@@ -1,47 +1,58 @@
-{% extends 'insurance/adminbase.html' %}
-{% load widget_tweaks %}
-{% block content %}
+{% extends 'insurance/adminbase.html' %} {% load widget_tweaks %} {% block
+content %}
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+  />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
-       <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   a:link {
-        text-decoration: none;
-      }
-    
+      text-decoration: none;
+    }
   </style>
 </head>
-<h2 style="text-align:center; color:blue;">ADD POLICY</h2>
-<form method="POST" autocomplete="off" style="margin:100px;margin-top: 0px;">
-    {%csrf_token%}
-    <div class="form-group">
-      <label for="course_name">Category</label>
-      {% render_field policyForm.category class="form-control" placeholder="Life Insurance" %}
+<h2 style="text-align: center; color: blue">ADD POLICY</h2>
+<form method="POST" autocomplete="off" style="margin: 100px; margin-top: 0px">
+  {%csrf_token%}
+  <div class="form-group">
+    <label for="course_name">Policy ID</label>
+    {% render_field policyForm.policy_id class="form-control" placeholder="1" %}
 
-        <label for="course_name">Policy Name</label>
-      {% render_field policyForm.policy_name class="form-control" placeholder="Jeevan Surbhi" %}
+    <label for="course_name">Policy Type</label>
+    {% render_field policyForm.policy_type class="form-control"
+    placeholder="Automobile Insurance" %}
+    <label for="course_name">Duration</label>
+    {% render_field policyForm.duration class="form-control" placeholder="Life
+    Insurance" %}
 
-     <label for="course_name">Sum Assurance</label>
-      {% render_field policyForm.sum_assurance class="form-control" placeholder="100000" %}
+    <label for="course_name">Policy Name</label>
+    {% render_field policyForm.policy_name class="form-control"
+    placeholder="Jeevan Surbhi" %}
+
+    <label for="course_name">Policy Limit</label>
+    {% render_field policyForm.policy_limit class="form-control"
+    placeholder="100000" %}
 
     <label for="course_name">Premium</label>
-      {% render_field policyForm.premium class="form-control" placeholder="5000" %}
+    {% render_field policyForm.premium class="form-control" placeholder="5000"
+    %}
 
-          <label for="course_name">Tenure</label>
-      {% render_field policyForm.tenure class="form-control" placeholder="12" %}
+    <label for="course_name">Benefits</label>
+    {% render_field policyForm.benefits class="form-control" placeholder="12" %}
+    <label for="course_name">Drawbacks</label>
+    {% render_field policyForm.drawbacks class="form-control" placeholder="12"
+    %}
+  </div>
 
-
-    </div>
-    
-    
-<br>
-    <button type="submit" class="btn btn-primary">ADD</button>
-  </form>
-<br><br><br><br>
+  <br />
+  <button type="submit" class="btn btn-primary">ADD</button>
+</form>
+<br /><br /><br /><br />
 {% endblock content %}
