--- a/templates/insurance/admin_delete_policy.html
+++ b/templates/insurance/admin_delete_policy.html
@@ -1,9 +1,11 @@
-{% extends 'insurance/adminbase.html' %}
-{% block content %}
-{%load static%}
+{% extends 'insurance/adminbase.html' %} {% block content %} {%load static%}
 
 <head>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link
+    href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+    rel="stylesheet"
+    id="bootstrap-css"
+  />
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
@@ -21,7 +23,7 @@
     }
   </style>
 </head>
-<br><br>
+<br /><br />
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
@@ -30,32 +32,41 @@
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-           <th>Serial No.</th>
+          <th>Serial No.</th>
+          <th>Policy ID</th>
           <th>Policy Name</th>
-          <th> Category</th>
-          <th> Sum Assurance</th>
-          <th> Premium</th>
-          <th> Tenure</th>
-          <th> Creation Date</th>
-             <th>Delete</th>
+          <th>Policy Type</th>
+          <th>Duration</th>
+          <th>Premium</th>
+          <th>Policy Limit</th>
+          <th>Benefits</th>
+          <th>Drawbacks</th>
+          <th>Delete</th>
         </tr>
       </thead>
       {% for t in policies %}
       <tr>
-
-          <td> {{ forloop.counter }}</td>
-        <td> {{t.policy_name}}</td>
-        <td> {{t.category}}</td>
-        <td> {{t.sum_assurance}}</td>
-        <td> {{t.premium}}</td>
-        <td> {{t.tenure}}</td>
-        <td>{{t.creation_date}}</td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'delete-policy' t.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td>{{ forloop.counter }}</td>
+        <td>{{t.policy_id}}</td>
+        <td>{{t.policy_name}}</td>
+        <td>{{t.policy_type}}</td>
+        <td>{{t.duration}}</td>
+        <td>{{t.premium}}</td>
+        <td>{{t.policy_limit}}</td>
+        <td>{{t.benefits}}</td>
+        <td>{{t.drawbacks}}</td>
+        <td>
+          <a
+            class="btn btn-danger btn-xs"
+            href="{% url 'delete-policy' t.id  %}"
+            ><span class="glyphicon glyphicon-trash"></span
+          ></a>
+        </td>
       </tr>
       {% endfor %}
     </table>
   </div>
 </div>
 
-<br><br><br><br><br><br>
+<br /><br /><br /><br /><br /><br />
 {% endblock content %}
