--- a/templates/insurance/admin_view_policy_holder.html
+++ b/templates/insurance/admin_view_policy_holder.html
@@ -31,6 +31,7 @@
       <thead>
         <tr>
         <th>Serial No.</th>
+        <th>Policy ID</th>
           <th>Policy Name</th>
           <th>Customer Name</th>
           <th> Applied Date</th>
@@ -41,6 +42,7 @@
       {% for t in policyrecords %}
       <tr>
         <td> {{ forloop.counter }}</td>
+        <td> {{t.policy_id}}</td> 
         <td> {{t.Policy}}</td>
         <td> {{t.customer}}</td>
         
