--- a/templates/insurance/admin_view_waiting_policy_holder.html
+++ b/templates/insurance/admin_view_waiting_policy_holder.html
@@ -1,9 +1,11 @@
-{% extends 'insurance/adminbase.html' %}
-{% block content %}
-{%load static%}
+{% extends 'insurance/adminbase.html' %} {% block content %} {%load static%}
 
 <head>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link
+    href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+    rel="stylesheet"
+    id="bootstrap-css"
+  />
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
@@ -21,7 +23,7 @@
     }
   </style>
 </head>
-<br><br>
+<br /><br />
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
@@ -30,20 +32,21 @@
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-        <th>Serial No.</th>
+          <th>Serial No.</th>
+          <th>Policy ID</th>
           <th>Policy Name</th>
           <th>Customer Name</th>
-          <th> Applied Date</th>
+          <th>Applied Date</th>
           <th>Status</th>
-          
         </tr>
       </thead>
       {% for t in policyrecords %}
       <tr>
-        <td> {{ forloop.counter }}</td>
-        <td> {{t.Policy}}</td>
-        <td> {{t.customer}}</td>
-        
+        <td>{{ forloop.counter }}</td>
+        <td>{{t.policy_id}}</td>
+        <td>{{t.Policy}}</td>
+        <td>{{t.customer}}</td>
+
         <td>{{t.creation_date}}</td>
         <td>{{t.status}}</td>
       </tr>
@@ -52,5 +55,5 @@
   </div>
 </div>
 
-<br><br><br><br><br><br>
+<br /><br /><br /><br /><br /><br />
 {% endblock content %}
