--- a/templates/insurance/update_policy.html
+++ b/templates/insurance/update_policy.html
@@ -62,8 +62,8 @@ content %}
     <label for="course_name">Policy ID</label>
     {% render_field policyForm.policy_id class="form-control" placeholder="1" %}
 
-    <label for="course_name">Policy Type</label>
-    {% render_field policyForm.policy_type class="form-control"
+    <label for="course_name">Category</label>
+    {% render_field policyForm.category class="form-control"
     placeholder="Automobile Insurance" %}
     <label for="course_name">Duration</label>
     {% render_field policyForm.duration class="form-control" placeholder="Life
