--- a/templates/insurance/admin_view_policy.html
+++ b/templates/insurance/admin_view_policy.html
@@ -35,7 +35,7 @@
           <th>Serial No.</th>
           <th>Policy ID</th>
           <th>Policy Name</th>
-          <th>Policy Type</th>
+          <th>Category</th>
           <th>Duration</th>
           <th>Premium</th>
           <th>Policy Limit</th>
@@ -49,7 +49,7 @@
         <td>{{ forloop.counter }}</td>
         <td>{{t.policy_id}}</td>
         <td>{{t.policy_name}}</td>
-        <td>{{t.policy_type}}</td>
+        <td>{{t.category}}</td>
         <td>{{t.duration}}</td>
         <td>{{t.premium}}</td>
         <td>{{t.policy_limit}}</td>
