--- a/templates/customer/customerbase.html
+++ b/templates/customer/customerbase.html
@@ -183,8 +183,8 @@
 
     <a href="/customer/customer-dashboard"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
     <a href="/customer/apply-policy"><i class="fab fa-product-hunt"></i><span>Apply Policy</span></a>
+    <a href="/customer/Payment"><i class="far fa-credit-card"></i><span>Payment</span></a>
     <a href="/customer/history"><i class="fas fa-history"></i><span>History</span></a>
-
     <a href="/customer/ask-question"><i class="fas fa-question-circle"></i><span>Ask Question</span></a>
     <a href="/customer/question-history"><i class="fas fa-sync-alt"></i><span>Question History</span></a>
   </div>
