--- a/templates/insurance/admin_dashboard.html
+++ b/templates/insurance/admin_dashboard.html
@@ -78,8 +78,18 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-green order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> <a href="admin-view-customer" style="text-decoration: none;color:white;">Total Registered User</a> </h6>
+            <h6 class="m-b-20"> <a href="admin-view-customer" style="text-decoration: none;color:white;">Total Registered Users</a> </h6>
             <h2 class="text-right"><i  class="fas fa-users f-left"></i><span>{{total_user}}</span></h2>
+            
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-xl-3">
+        <div class="card bg-c-green order-card">
+          <div class="card-block">
+            <h6 class="m-b-20"> <a href="admin-view-agent" style="text-decoration: none;color:white;">Total Agents</a> </h6>
+            <h2 class="text-right"><i  class="fas fa-users f-left"></i><span>{{total_agent}}</span></h2>
             
           </div>
         </div>
