--- a/templates/insurance/admin_view_endorsement.html
+++ b/templates/insurance/admin_view_endorsement.html
@@ -1,4 +1,4 @@
-{% extends 'customer/customerbase.html' %} {% block content %} {%load static%}
+{% extends 'insurance/adminbase.html' %} {% block content %} {%load static%}
 
 <head>
   <link
@@ -21,7 +21,6 @@
     .row {
       margin: 100px;
     }
-
     label #sidebar_btn {
       z-index: 1;
       color: #fff;
@@ -41,24 +40,30 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Asked Question History</h6>
+      <h6 class="panel-title">Endorsements</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-          <th>Serial No.</th>
-          <th>Question</th>
-          <th>Admin Comment</th>
-          <th>Asked Date</th>
+          <th>Endorsement Id</th>
+          <th>Type</th>
+          <th>Benefit</th>
+
+          <th>Update</th>
         </tr>
       </thead>
-      {% for t in questions %}
+      {% for t in customers %}
       <tr>
-        <td>{{ forloop.counter }}</td>
-        <td>{{t.description}}</td>
-
-        <td>{{t.admin_comment}}</td>
-        <td>{{t.asked_date}}</td>
+        <td>{{t.endorsement_id}}</td>
+        <td>{{t.type}}</td>
+        <td>{{t.benefit}}</td>
+        <td>
+          <a
+            class="btn btn-primary btn-xs"
+            href="{% url 'update-customer' t.id  %}"
+            ><span class="glyphicon glyphicon-edit"></span
+          ></a>
+        </td>
       </tr>
       {% endfor %}
     </table>
