--- a/templates/customer/customerclick.html
+++ b/templates/customer/customerclick.html
@@ -30,10 +30,10 @@
     <hr class="my-4">
     {% comment %} <p>Kindly Login to access various features.</p> {% endcomment %}
     <p class="lead">
-      <p> Create New Account by Signing up </p><br>
-      <a class="btn btn-primary btn-lg" href="customersignup" role="button">Sign Up</a><br><br><br>
-      <p> Already Registered?</p><br>
-      <a class="btn btn-primary btn-lg" href="customerlogin" role="button">Login</a>
+      <h5><p> Create New Account</p></h5><br>
+      <a class="btn btn-outline-primary btn-lg" href="customersignup" role="button">Sign Up</a><br><br><br>
+      <h5><p>Already Registered?</p></h5><br>
+      <a class="btn btn-outline-primary btn-lg" href="customerlogin" role="button">Login</a>
     </p>
     <br><br><br>
   </div>
