--- a/templates/customer/customersignup.html
+++ b/templates/customer/customersignup.html
@@ -13,7 +13,7 @@
     {% include "insurance/navbar.html" %}
 
     <br /><br /><br />
-    <h3 style="text-align: center; color: red">CUSTOMER SIGNUP</h3>
+    <h3 style="text-align: center; color: rgb(56, 120, 0)">CUSTOMER SIGNUP</h3>
     <form method="POST" autocomplete="off" enctype="multipart/form-data">
       {% csrf_token %}
       <div class="form-row">
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <button type="submit" class="btn btn-primary">Sign Up</button>
+      <button type="submit" class="btn btn-outline-primary">Sign Up</button>
     </form>
 
     <br /><br />
