--- a/templates/insurance/index.html
+++ b/templates/insurance/index.html
@@ -4,7 +4,7 @@
   <style>
     .xyz {
       margin-bottom: 0px;
-      background-image: url('{% static "image/homepage.jpg" %}');
+      background-image: url('{% static "image/home.jpg" %}');
       background-size: cover;
       background-repeat: no-repeat;
     }
@@ -23,12 +23,15 @@
     </section>
 
     <div class="jumbotron" style="margin-top: 0px; margin-bottom: 0px">
-      <p class="lead text-center">
-        “Whole life does two things for you: Protects your family and allows you
-        to save for your future.”
-      </p>
+      <h2>
+        <i>
+          <p class="text-center">
+            “An investment in knowledge pays the best interest.”
+          </p>
+        </i>
+      </h2>
 
-      <p class="text-center">- Dinara</p>
+      <p class="text-center">Benjamin Franklin</p>
     </div>
     {% include "insurance/footer.html" %}
   </body>
